my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EDEVIMP/EDEVIMP.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDEVIMP.dml:13:1: error EDEVIMP: cannot import file containing device declaration
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDEVIMP.dml:9:1: error EDEVIMP: cannot import file containing device declaration
